updated my about me page -- bria

--- a/templates/bria.html
+++ b/templates/bria.html
@@ -10,21 +10,31 @@
 
 <body>
 <h1>Hi my name is Bria!</h1>
-<p>I love photography! Here are some of my favorite photos I've taken</p>
-<iframe src="https://drive.google.com/file/d/1d2vt7aKy8Efi-Ipwh5zjENWGikupKA14/preview" width="640" height="480" allow="autoplay"> </iframe>
-<p>I also love yearbook and graphic design<br>
-    I also love hanging out with my friends Aleezay, Ella, Ashika, and Riya.
+<h2>I love photography! Here are some of my favorite photos I've taken</h2>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSv5vT8ZANkAq1nN0ydXo0CYxnQkXmUBkPaaUM-CeQ7eJszcade1E1bK551qSmTmgxUfABwpmymlO5X/embed?start=false&loop=true&delayms=30000" frameborder="0" width="1200" height="699" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<h3>I also love yearbook and graphic design<br>
+    I also love hanging out with my friends Aleezay, Ella, and Riya.
 
-</p>
-<img id="myImage" src="/static/assets/bria's%20pic.png" height="640" width="480">
-<img id="friends" src="/static/assets/"
+</h3>
+<img id="myImage" src="/static/assets/briafriends.png" width="430">
+<img id="friends" src="/static/assets/briapic2.png" width="430">
+<img id="friends" src="/static/assets/briaimage.png" width="430">
 
 
-<script>
-    document.getElementById("myImage").src = "/static/assets/bria's%20pic.png";
-
-</script>
 </body>
+
+    <style>
+    h1,h3,h2,title{
+        font-family: "Baskerville Old Face";
+        color: antiquewhite;
+    }
+
+    h3,h2,h1{
+        text-align: center;
+
+    }
+
+    </style>
 {% endblock %}
 
 {% block background %}
