random self descriptions upon page refresh

--- a/templates/valerie.html
+++ b/templates/valerie.html
@@ -5,9 +5,10 @@
 {% block body %}
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Valerie Zone</title>
 </head>
-<body>
+<body onload="randAdj()">
+
 <div class="w3-container w3-sand">
     <style>
         h2 {text-align: center;}
@@ -31,7 +32,13 @@
     <img src="/static/assets/valerie.png" height="500" width="200"/>
 
     <p style="font-family:Arial">haha yeah i know how to use copy and paste Im so cool</p>
-
+    <p id="adj"></p>
+    <script>
+        const dict = ["a hard worker", "really funny", "an avid computer user", "wanted by the IRS", "outside your house", "currently in a foreign country", "feeling like a bored god lately", "almost six feet tall", "the joker, baby!"];
+        function randAdj() {
+            document.getElementById("adj").innerHTML = "I am " + dict[Math.floor(Math.random() * 10)] + " (you should refresh this page btw)";
+        }
+    </script>
     <p style="font-family:Arial">hello my name is valerie but you can call me val</p>
     <p style="font-family:Arial">as you can see by my copious overuse of it above, i have exactly <b>one</b> photo of me i actually like</p>
     <style>
