Youtube Playlst button

--- a/templates/greet.html
+++ b/templates/greet.html
@@ -6,12 +6,13 @@
 <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
     <div class="col-0">
         <form action="/greet" id="greet" method="POST" >
-            <label for="name" style="font-size:30px; text-align:left; font-family: gilroy,serif;">Type a greeting name?</label>
+            <label for="name" style="font-size:30px; text-align:left; font-family: gilroy,serif;">Whats your name?</label>
             <input name="name" id="name">
             <input type="submit" value="Greetings!">
         </form>
     </div>
-    <p style="font-size:30px">Hello {{name}}!</p>
+    <p style="font-size:30px">Its Nice to Meet You {{name}}!</p>
+    <p style="font-size:30px">Welcome to the Hackermen Website!!</p>
 
         <div class = "col-0">
             <img src="/static/cat.png">
