--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,7 @@
 <!-- Setting up variables to customize "project" details to be specific to index page -->
 {% set project = "The Hackermen" %}
 {% set overview = "https://github.com/Reinhardtlotter/flask_portfolio" %}
-{% set repo = "https://drive.google.com/drive/u/1/my-drive" %}
-
+{% set repo = "https://www.youtube.com/playlist?list=PLqQJAW1jlFX_KScLv7LZFcHH2t_uYb4Vn" %}
 {% block background %}
 
 
