--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -145,7 +145,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
                 <a href="{{ overview }}" class="btn">GITHUB</a>
             </div>
                         <div class="col-3">
-                            <a href="{{ repo }}" class="btn" style = "position:relative; left:-30px; top:-10px">Test</a>
+                            <a href="{{ repo }}" class="btn" style = "position:relative; left:-30px; top:-10px">Youtube Playlist</a>
                         </div>
             {% endblock %}
         </div>
