Attempt to fix Binary

--- a/templates/binary.html
+++ b/templates/binary.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% extends "layouts/project.html" %}
+{% set project = "Binary" %}
 
 <!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
 <!-- need to adjust Templates to start -->
