Added Embeds to Brainwrite under minilabs and edited pages the theme

--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -10,7 +10,7 @@
             <title>Minilabs</title>
             <style>
                 body {
-                    background: #a7bbec;
+                    background: #bc8f8f;
                 }
 
                 .sneaky {
@@ -54,16 +54,16 @@
 
         }
 
-        #customers tr:nth-child(even){background-color: #e7c6ff;}
-        #customers tr:nth-child(odd){background-color: #e7c6ff;}
+        #customers tr:nth-child(even){background-color: #e8c7c5;}
+        #customers tr:nth-child(odd){background-color: #e8c7c5;}
 
-        #customers tr:hover {background-color: #c19ee0;}
+        #customers tr:hover {background-color: #e2b8b6;}
 
         #customers th {
             padding-top: 12px;
             padding-bottom: 12px;
             text-align: left;
-            background-color: #e7c6ff;
+            background-color: #e2b9b6;
             color: white;
         }
     </style>
@@ -79,10 +79,9 @@
         </tr>
         <tr>
             <td><h5>Brainwrite</h5>
-                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 340px; width: 430px;">
-                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 340px; width: 430px;">
-
-                </iframe>
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 340px; width: 430px;"></iframe>
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTjP7n9J6qQ8vbbhwBtw5pnQnjTpcE9E5SZVcdGLSh3WoBRomvmnvsNTcJsoARTEurCN-KtsqXYUQxD/pub?embedded=true" style="height: 340px; width: 430px;"></iframe>
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vRTBYziggXYicsu0RMoorCr-xUGZqmadCBMlY_QcmPHeSrIBFbETHIFfc5n_kvCXEd-3gQa4qD8CWGt/pub?embedded=true" style="height: 340px; width: 430px;"></iframe>
                 </p>
             </td>
             <td>
@@ -106,7 +105,7 @@
         </tr>
         <tr>
             <td>Greet
-                <div class="center-block" style="margin: 2% 5% 5%; width: 430px; height: 340px; text-align:left; font-family: gilroy,serif;">
+                <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
 
                     <div class="col-12">
                         <p>Hello, {{fname}}!</p>
