--- a/templates/insights.html
+++ b/templates/insights.html
@@ -50,6 +50,16 @@
     </a>
 
     </div>
+
+    <html>
+    <head>
+        <style>
+            body {
+                background-color: white;
+            }
+        </style>
+    </head>
+    <body>
             </body>
             </html>
 
