--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -13,6 +13,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('binary') }}>Binary</a>
             <a class="nav-link" href={{ url_for('about') }}>About</a>
             <a class="nav-link" href={{ url_for('insights') }}>Insights</a>
+            <a class="nav-link" href={{ url_for('rgb') }}>RGB</a>
             <a class="nav-link" href="/stub">Stub</a>
 
 
