--- a/templates/sonakshi.html
+++ b/templates/sonakshi.html
@@ -41,6 +41,8 @@
     </head>
 
     <h1>Sonakshi</h1>
+    <p>Here is my RGB page:</p>
+    <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('sonakshirgb') }}>SonakshiRGB</a>
     <br />
 
     <div class="container">
