added rgb page for kashish

--- a/templates/kashish.html
+++ b/templates/kashish.html
@@ -49,7 +49,10 @@
         <img src="/static/assets/kashish.png" alt="Kashish's picture" style="width: 200px; height: 200px;">
         <p style="text-align: center;"> Kashish Chopra </p>
 
-
+        <h1>Kashish</h1>
+        <p>Here is my RGB page:</p>
+        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('kashishirgb') }}>KashishRGB</a>
+        <br />
 
 
 
