--- a/templates/game.html
+++ b/templates/game.html
@@ -52,49 +52,42 @@
         <a target="_blank" href="/static/assets/tayloralbum.jpg">
             <img src="/static/assets/tayloralbum.jpg" alt="Cinque Terre" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
     </div>
 
     <div class="gallery">
         <a target="_blank" href="/static/assets/harryalbum.jpg">
             <img src="/static/assets/harryalbum.jpg" alt="Forest" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
     </div>
 
     <div class="gallery">
         <a target="_blank" href="/static/assets/paris.jpg">
             <img src="/static/assets/paris.jpg" alt="Northern Lights" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
     </div>
 
     <div class="gallery">
         <a target="_blank" href="/static/assets/download.jpg">
             <img src="/static/assets/download.jpg" alt="Mountains" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
     </div>
 
     <div class="gallery">
         <a target="_blank" href="/static/assets/billiealbum.jpg">
             <img src="/static/assets/billiealbum.jpg" alt="Mountains" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
     </div>
 
     <div class="gallery">
-        <a target="_blank" href="/static/assets/duaalbum.jpg">
-            <img src="/static/assets/duaalbum.jpg" alt="Mountains" width="600" height="400">
+        <a target="_blank" href="/static/assets/kaynealbum.png">
+            <img src="/static/assets/kaynealbum.png" alt="Mountains" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
     </div>
 
     <div class="gallery">
         <a target="_blank" href="/static/assets/bcbc.jpg">
             <img src="/static/assets/bcbc.jpg" alt="Mountains" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
     </div>
 
     </body>
