--- a/templates/walruses.html
+++ b/templates/walruses.html
@@ -1,14 +1,81 @@
-<!-- Extending the project layout, as this file will do minor customizations -->
-{% extends "layouts/project.html" %}
+{% extends "layouts/base.html" %}
 
-<!-- Setting up variables to customize "project" details to be specific to walruses -->
-{% set project = "Walruses" %}
-{% set overview = "https://nighthawkcodingsociety.com/projectsearch/dash" %}
-{% set scrumboard = "https://github.com/ridhimainukurti/group-2/projects/1" %}
-{% set repo = "https://github.com/ridhimainukurti/group-2" %}
-{% set authors = "https://wasc.nighthawkcodingsociety.com/about"  %}
+<script>
+    // Hack: add java script function to toggle image from original to gray and back (toggle)
+    //  document.getElementById("img<n>").src
+    //  document.getElementID("img_gray<n>").innerHTML
+    //  help: https://www.geeksforgeeks.org/how-to-change-the-src-attribute-of-an-img-element-in-javascript-jquery/
+</script>
+<title>RGB starter</title>
+{% block body %}
 
-<!-- Setting up a block replacement to customize background to RINGS -->
+<h1 class="text-center">RGB values within an Image</h1>
+<div class="container">
+    <div class="row justify-content-md-center">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Meta Data</th>
+                <th>Image</th>
+                <th>Data</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for image in images %}
+                <tr>
+                    <td>
+                        <div>{{image.file}}</div>
+                        <div>{{image.format}}</div>
+                        <div>{{image.size}}</div>
+                        <div>{{image.label}}</div>
+                        <div>{{image.source}}</div>
+                    </td>
+                    <td>
+                        <img class="img-responsive py-3" id=img{{loop.index}} alt="" width="256" height="Auto" src="{{image.base64}}" >
+                        <!-- Hack: create button (btn{{loop.index}} to  call java script function
+                               pass index to allow you to toggle images with hidden id's
+                               {{image.base64}}  original image
+                               {{image.base64_GRAY}}  gray scale image
+                            -->
+                        <p hidden id="img_orig{{loop.index}}">{{image.base64}}</p>
+                        <p hidden id="img_gray{{loop.index}}">{{image.base64_GRAY}}</p>
+                    </td>
+                    <td>
+                        <div class="overflow-auto" style="height: 256px">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>{{image.mode}}</th>
+                                    <th>Hex Code</th>
+                                    <th>Binary</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for row in image.data[:256:+1] %}
+                                    <tr>
+                                        <td>{{loop.index}}</td>
+                                        <td>{{row}}</td>
+                                        <td>{{image.hex_array[loop.index - 1]}}</td>
+                                        <td>{{image.binary_array[loop.index - 1]}}
+                                    </tr>
+                                    {% if loop.index > 256 %}
+                                        <tr><td>...</td><td>truncated</td><td>...</td><td>...</td></tr>
+                                    {% endif %}
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+    </div>
+</div>
+
 {% block background %}
 {% endblock %}
 
+{% endblock %}
