--- a/templates/kashish.html
+++ b/templates/kashish.html
@@ -51,7 +51,7 @@
 
         <h1>Kashish</h1>
         <p>Here is my RGB page:</p>
-        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('kashishirgb') }}>KashishRGB</a>
+        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('kashishrgb') }}>KashishRGB</a>
         <br />
 
 
