--- a/templates/grid.html
+++ b/templates/grid.html
@@ -39,7 +39,7 @@
             <a href="/greet">Greet</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href="/binary">Binary</a>
+            <a href={{ url_for('binary') }}>Binary</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
             <a href="/stub">Video/Journal 0</a>
