--- a/templates/binary.html
+++ b/templates/binary.html
@@ -61,6 +61,8 @@
          DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
          below ASCII for more ideas of where to make changes
          */
+        //let text= String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
+        //document.getElementbyId('ascii').innerHTML= text;    //set ascii to table
     }
 
     /* This function converts decimal number to selected base using decimal, base, quotient, remainder.
@@ -168,6 +170,7 @@
                     <td id="hexadecimal">0</td>
                     <td id="decimal">0</td>
                     <!-- Hack: display ASCII printable character(s)  -->
+                    <!-- <td id="ascii">0</td> -->
                     <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
 
                 </tr>
