--- a/templates/grid.html
+++ b/templates/grid.html
@@ -124,7 +124,7 @@
             <a href="/rgb">RGB Binary</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href=""></a>
+            <a href="/list">List</a>
         </div>
         {% endblock %}
     </div>
