Centered the title page

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,15 @@
             <input type="radio" name="choice" value="Gorb - Came Back"> Wrong <br>
         </form>
     </div>
+
+    <style>
+        body{
+            text-align: center;
+
+        }
+
+
+    </style>
 {% endblock %}
 {% block background %}
 {% endblock %}
