--- a/templates/grid.html
+++ b/templates/grid.html
@@ -39,7 +39,7 @@
             <a href="/greet">Greet</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href={{ url_for('binary') }}>Binary</a>
+            <a href="/binary">Binary</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
             <a href="/stub">Video/Journal 0</a>
@@ -77,13 +77,16 @@
             }
         </style>
         <div class="col-sm" style="font-size:30px;">
-            <a href="https://docs.google.com/document/d/13bldcvcK0Tj5fnoD3ZBt-I9W8JwUMvsLGsQxQLcwXgM/edit?usp=sharing">Journal</a>
+            <a href="https://docs.google.com/document/d/13bldcvcK0Tj5fnoD3ZBt-I9W8JwUMvsLGsQxQLcwXgM/edit" target="_blank">Journal</a>
+            <a> </a>
+            <a href="https://docs.google.com/document/d/1nQK3_Lvh3XT3Vwb-PrkNCrcTUAUlYSsifrXgkbSCXvw/edit?usp=sharing" target="_blank">(1)</a>
+            <a href="https://docs.google.com/document/d/1iEzHgbfWVNqOpFYsCOu6BfKV71yTtvkz7QME-QIYMnQ/edit?usp=sharing" target="_blank">(2)</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
             <a href="/wireframes">Wireframes</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href="https://github.com/Reinhardtlotter/flask_portfolio/issues?q=is%3Aissue+label%3A%22TPT+3%22+is%3Aclosed">TPT3</a>
+            <a href="https://github.com/Reinhardtlotter/flask_portfolio/issues?q=is%3Aissue+label%3A%22TPT+3%22+is%3Aclosed" target="_blank">TPT3</a>
         </div>
     </div>
     <div class="row">
@@ -124,7 +127,7 @@
             <a href="/rgb">RGB Binary</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href="/list">List</a>
+            <a href=""></a>
         </div>
         {% endblock %}
     </div>
