--- a/templates/rgb.html
+++ b/templates/rgb.html
@@ -6,6 +6,8 @@
     //  document.getElementID("img_gray<n>").innerHTML
     //  help: https://www.geeksforgeeks.org/how-to-change-the-src-attribute-of-an-img-element-in-javascript-jquery/
 </script>
+document.getElementById("img<n>").src
+    //  document.getElementID("img_gray<n>").innerHTML
 <title>RGB starter</title>
 
 {% block body %}
