--- a/templates/sonakshirgb.html
+++ b/templates/sonakshirgb.html
@@ -1,21 +1,88 @@
 <!DOCTYPE html>
 {% extends "layouts/base.html" %}
 
+{% set project = "Sonakshi RGB" %}
+
 {% block background %}
 {% endblock %}
 
-
 {% block body %}
+    <style>
+        html, body{
+            background-color: mediumslateblue;
+        }
+        h1 {
+            font-size: 69px; /* lol */
+        }
+    </style>
+
     <script>
         // Hack: add java script function to toggle image from original to gray and back (toggle)
         //  document.getElementById("img<n>").src
         //  document.getElementID("img_gray<n>").innerHTML
         //  help: https://www.geeksforgeeks.org/how-to-change-the-src-attribute-of-an-img-element-in-javascript-jquery/
-    </script>
-    <title>RGB starter</title>
 
-    <h1 class="text-center"> Sonakshi's RGB values </h1>
+        var imageColor = 0; // 0 is color, 1 is gray
+        var grayscale = {{ grayed|safe }};
+        var colorscale = {{ colored|safe }};
+
+        function toggleColors(array) {
+            for (var i = 1; i <= array.length; i++) {
+                let id = "img" + i;
+                setImg(id, array[i-1]);
+            }
+        }
+
+        function toggle() {
+            if (imageColor == 0) {
+                toggleColors(grayscale);
+                imageColor = 1;
+            } else {
+                toggleColors(colorscale);
+                imageColor = 0;
+            }
+        }
+        let rot = 0;
+        function imgrotate() {
+            rot += 90;
+            if (rot === 360) {
+                rot = 0;
+            }
+            document.querySelector("img").style.transform = `rotate(${rot}deg)`;
+        }
+
+        function setImg(img, base64) {
+            // add button and rotate image from original to gray and back (toggle)
+            document.getElementById(img).src = base64;  //change img src to inner html on <p> tag
+        }
+    </script>
+    <title>Sonakshi RGB</title>
+
+    <h1 class="text-center">Sonakshi's RGB values within an Image</h1>
+    <div class="container"></div>
+    <div class="row justify-content-md-center" style="text-align: center; width: 50%">
+        <div class="col align-self-start">
+            <p>Would you like to add text to the images?</p>
+            <form action="{{ url_for('sonakshirgb') }}" method="POST">
+                <input type="radio" id="yes" name="option" value="yes">
+                <label for="yes">Yes</label>
+                <input type="radio" id="no" name="option" value="no">
+                <label for="no">No</label>
+                <br>
+                <input type="submit">
+            </form>
+        </div>
+        <div class="col align-self-start">
+            <p>Grayscale</p>
+            <button onclick="toggle()">Toggle Colors!</button>
+            <p>Does not work on edited images (click "NO" button to go back)</p>
+        </div>
+    </div>
+
+
+
     <div class="container">
+
         <div class="row justify-content-md-center">
             <table class="table">
                 <thead>
@@ -57,7 +124,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    {% for row in image.data[:256+1] %}
+                                    {% for row in image.data[:256:+1] %}
                                         <tr>
                                             <td>{{loop.index}}</td>
                                             <td>{{row}}</td>
