--- a/templates/kashishrgb.html
+++ b/templates/kashishrgb.html
@@ -15,6 +15,14 @@
     <title>RGB starter</title>
 
     <h1 class="text-center"> Kashish's RGB values </h1>
+    <div class="container"></div>
+    <div class="row justify-content-md-center" style="text-align: center; width: 50%">
+        <div class="col align-self-start">
+            <p>Grayscale</p>
+            <button onclick="toggle()">Toggle Colors!</button>
+        </div>
+    </div>
+
     <div class="container">
         <div class="row justify-content-md-center">
             <table class="table">
