--- a/templates/sonakshirgb.html
+++ b/templates/sonakshirgb.html
@@ -46,6 +46,17 @@
     <div class="container"></div>
     <div class="row justify-content-md-center" style="text-align: center; width: 50%">
         <div class="col align-self-start">
+            <p>Would you like to rotate the images?</p>
+            <form action="{{ url_for('sonakshirgb') }}" method="POST">
+                <input type="radio" id="yes" name="option" value="yes">
+                <label for="yes">Yes</label>
+                <input type="radio" id="no" name="option" value="no">
+                <label for="no">No</label>
+                <br>
+                <input type="submit">
+            </form>
+
+            <div class="col align-self-start">
             <button onclick="toggle()">Toggle Colors</button>
         </div>
     </div>
