organized spongebob stuff

--- a/templates/valerie.html
+++ b/templates/valerie.html
@@ -51,9 +51,9 @@
     <ul>
         <li>i am 15 years old</li>
         <li>i use she/they but if youre upset at me they/them is fine</li>
-        <li>EECS at uc berkeley is my dream college path</li>
+        <li>EECS at uc berkeley sounds cool</li>
         <li>i want to do computer engineering for a living</li>
-        <li>i am quite politically engaged</li>
+        <li>i am  politically engaged :)</li>
         <li>i have gazed into the void for so long that its abyssal image is permanently etched into my retinas</li>
         <li>i love chocolate milk</li>
         <li>can you remind me to buy some chocolate milk later thanks</li>
